# 4M26-burrsolver

./: .gitignore  README.md  debug.py  puzzles.json  pyproject.toml
lecture/: .gitignore  collision_animation.py  pseudocode.tex  shapes.py  symmetry.py  voxel_animation.py
src/burrsolver/: __init__.py  astar.py  geometry.py  piece.py  position.py  puzzle.py  shape.py  solver.py  visualization.py  voxel.py
tests/: test_position.py  test_solve.py  test_state.py  test_voxel.py
